@@ -66,20 +66,20 @@ WPC_INPUT_PORTS_START(ww,3)
   PORT_START /* 0 */
     COREPORT_BIT(0x0001,"Left Qualifier",	KEYCODE_LCONTROL)
     COREPORT_BIT(0x0002,"Right Qualifier",	KEYCODE_RCONTROL)
-    COREPORT_BIT(0x0004,"Rpd/Wpool Ramp",        KEYCODE_T)
+    COREPORT_BIT(0x0004,"Rpd/Wpool Ramp",	KEYCODE_T)
     COREPORT_BIT(0x0008,"L/R Outlane",		KEYCODE_O)
-    COREPORT_BIT(0x0010,"L/R Slingshot",		KEYCODE_MINUS)
+    COREPORT_BIT(0x0010,"L/R Slingshot",	KEYCODE_MINUS)
     COREPORT_BIT(0x0020,"L/R Inlane",		KEYCODE_I)
-    COREPORT_BIT(0x0040,"L/R Loop",		KEYCODE_L)
+    COREPORT_BIT(0x0040,"L/R Loop",			KEYCODE_L)
     COREPORT_BIT(0x0080,"L/DDrop Ramp",		KEYCODE_R)
-    COREPORT_BIT(0x0100,"LJet",			KEYCODE_W)
-    COREPORT_BIT(0x0200,"RJet",			KEYCODE_E)
-    COREPORT_BIT(0x0400,"CJet",			KEYCODE_R)
-    COREPORT_BIT(0x0800,"3BankT",		KEYCODE_T)
-    COREPORT_BIT(0x1000,"3BankM",		KEYCODE_Y)
-    COREPORT_BIT(0x2000,"3BankB",		KEYCODE_U)
+    COREPORT_BIT(0x0100,"LJet",				KEYCODE_W)
+    COREPORT_BIT(0x0200,"RJet",				KEYCODE_E)
+    COREPORT_BIT(0x0400,"CJet",				KEYCODE_R)
+    COREPORT_BIT(0x0800,"3BankT",			KEYCODE_T)
+    COREPORT_BIT(0x1000,"3BankM",			KEYCODE_Y)
+    COREPORT_BIT(0x2000,"3BankB",			KEYCODE_U)
     COREPORT_BIT(0x4000,"Light",			KEYCODE_I)
-    COREPORT_BIT(0x8000,"Lock",			KEYCODE_O)
+    COREPORT_BIT(0x8000,"Lock",				KEYCODE_O)
 
   PORT_START /* 1 */
     COREPORT_BIT(0x0001,"River",			KEYCODE_A)
@@ -88,28 +88,28 @@ WPC_INPUT_PORTS_START(ww,3)
     COREPORT_BIT(0x0008,"rivEr",			KEYCODE_F)
     COREPORT_BIT(0x0010,"riveR",			KEYCODE_G)
     COREPORT_BIT(0x0020,"Drain",			KEYCODE_Q)
-    COREPORT_BIT(0x0040,"EB",			KEYCODE_K)
-    COREPORT_BIT(0x0080,"Lockup",		KEYCODE_L)
-    COREPORT_BIT(0x0100,"LHotFoot",		KEYCODE_Z)
-    COREPORT_BIT(0x0200,"UHotFoot",		KEYCODE_X)
+    COREPORT_BIT(0x0040,"EB",				KEYCODE_K)
+    COREPORT_BIT(0x0080,"Lockup",			KEYCODE_L)
+    COREPORT_BIT(0x0100,"LHotFoot",			KEYCODE_Z)
+    COREPORT_BIT(0x0200,"UHotFoot",			KEYCODE_X)
     COREPORT_BIT(0x0400,"WpoolPopper",		KEYCODE_J)
-    COREPORT_BIT(0x0800,"Hidden",		KEYCODE_H)
+    COREPORT_BIT(0x0800,"Hidden",			KEYCODE_H)
 
 WPC_INPUT_PORTS_END
 
 /*-------------------
 / Switch definitions
 /--------------------*/
-#define swStart      	13
-#define swTilt       	14
+#define swStart		13
+#define swTilt		14
 #define swOutHole	15
 #define swLeftJet	16
 #define swRightJet	17
 #define swCenterJet	18
 
-#define swSlamTilt	21
-#define swCoinDoor	22
-#define swTicket     	23
+#define swSlamTilt		21
+#define swCoinDoor		22
+#define swTicket		23
 #define swLeftOutlane	25
 #define swLeftInlane	26
 #define swRightInlane	27
@@ -124,59 +124,59 @@ WPC_INPUT_PORTS_END
 #define sw3BankM	37
 #define sw3BankB	38
 
-#define swLite		41
-#define swLock		42
-#define swLeftLoop	43
-#define swRightLoop	44
+#define swLite			41
+#define swLock			42
+#define swLeftLoop		43
+#define swRightLoop		44
 #define swSecretPassage	45
 #define swEnterLRamp	46
 #define swEnterRapids	47
 #define swEnterCanyon	48
 
-#define swLeftSling	51
+#define swLeftSling		51
 #define swRightSling	52
-#define swShooter	53
-#define swLArena	54
-#define swRArena	55
-#define swExtraBall	56
+#define swShooter		53
+#define swLArena		54
+#define swRArena		55
+#define swExtraBall		56
 #define swCanyonMade	57
 #define swBigFootCave	58
 
 #define swWpoolPopper	61
-#define swWpoolMade	62
-#define swLockupR	63
-#define swLockupC	64
-#define swLockupL	65
-#define swLRampMade	66
+#define swWpoolMade		62
+#define swLockupR		63
+#define swLockupC		64
+#define swLockupL		65
+#define swLRampMade		66
 #define swEnterDDrop	68
 
 #define swRapidsMade	71
-#define swUHotFoot	73
-#define swLHotFoot	74
-#define swDDropMade	75
-#define swRTrough	76
-#define swCTrough	77
-#define swLTrough	78
+#define swUHotFoot		73
+#define swLHotFoot		74
+#define swDDropMade		75
+#define swRTrough		76
+#define swCTrough		77
+#define swLTrough		78
 
-#define swBigFoot1	86
-#define swBigFoot2	87
+#define swBigFoot1		86
+#define swBigFoot2		87
 
 /*---------------------
 / Solenoid definitions
 /----------------------*/
-#define sOutHole	1
-#define sTrough		2
+#define sOutHole		1
+#define sTrough			2
 #define sWpoolPopper	3
 #define sLockupPopper	4
-#define sKickBack	5
-#define sDiverter	6
-#define sKnocker	7
-#define sLeftSling	10
-#define sRightSling	11
-#define sLeftJet	12
-#define sRightJet	13
-#define sCenterJet	14
-#define sMotor		25
+#define sKickBack		5
+#define sDiverter		6
+#define sKnocker		7
+#define sLeftSling		10
+#define sRightSling		11
+#define sLeftJet		12
+#define sRightJet		13
+#define sCenterJet		14
+#define sMotor			25
 #define sMotorDriver	26
 
 /*---------------------
@@ -189,7 +189,7 @@ enum {stRTrough=SIM_FIRSTSTATE, stCTrough, stLTrough, stOutHole, stDrain,
       stRiver, strIver, striVer, strivEr, striveR,
       stEnterLockup, stLockupL, stLockupC, stLockupR,
       stLeftLoop, stLeftLoop2, stLJet, stRJet, stCJet, stRightLoop, stLeftLoop3, stRightLoop2, stSecret
-	  };
+      };
 
 static sim_tState ww_stateDef[] = {
   {"Not Installed",	0,0,		 0,		stDrain,	0,	0,	0,	SIM_STNOTEXCL},
@@ -281,7 +281,7 @@ static int ww_handleBallState(sim_tBallStatus *ball, int *inports) {
 	{
 
 	/* Ball in Shooter Lane */
-    	case stBallLane:
+		case stBallLane:
 		if (ball->speed < 20)
 			return setState(stNotEnough,25);	/*Ball not plunged hard enough*/
 		if (ball->speed < 40)
@@ -297,8 +297,8 @@ static int ww_handleBallState(sim_tBallStatus *ball, int *inports) {
 		else
 			return setState(stInCRamp2,5);
 
-       }
-    return 0;
+	}
+	return 0;
   }
 
 /*---------------------------
@@ -431,16 +431,14 @@ WPCS_SOUNDROM248("ww_u18.p2",CRC(7a9ace30) SHA1(996cb73504ef73675c596e6f811047f1
                  "ww_u14.l1",CRC(f3faa427) SHA1(fb0a266b80571b4717caa69f078b7e73e2866b6b))
 WPC_ROMEND
 
-WPC_ROMSTART(ww,p1,"ww_p8.u6",    0x80000,CRC(251a7f14) SHA1(8e36efc9a14d3cd31967f072bfc185461022864d))
+// This combination was found in a working machine
+//  versions as taken from the labels on the chip (handwritten): U6=P6, U18=P0, U15=P0, but the sound roms actually report as P1
+WPC_ROMSTART(ww,p6,"ww_p6.u6",    0x80000,CRC(97dd311f) SHA1(7a0079365479fd4af7465a48cafd10a6ef169073))
 WPCS_SOUNDROM248("ww_u18.p1",CRC(e0e51ea6) SHA1(819133d55a48ea84b6d8d0dfd1316f28919361cc), \
                  "ww_u15.p1",CRC(a2a8e005) SHA1(bdbfc3f6c403d1ebef822a6381574f4a7bd19897), \
                  "ww_u14.l1",CRC(f3faa427) SHA1(fb0a266b80571b4717caa69f078b7e73e2866b6b))
 WPC_ROMEND
-WPC_ROMSTART(ww,p2,"ww_p9.u6",    0x80000,CRC(f93bdf3e) SHA1(6c3ea390fb85549cbdd278a7a986b1d8489b7a6e))
-WPCS_SOUNDROM248("ww_u18.p1",CRC(e0e51ea6) SHA1(819133d55a48ea84b6d8d0dfd1316f28919361cc), \
-                 "ww_u15.p1",CRC(a2a8e005) SHA1(bdbfc3f6c403d1ebef822a6381574f4a7bd19897), \
-                 "ww_u14.l1",CRC(f3faa427) SHA1(fb0a266b80571b4717caa69f078b7e73e2866b6b))
-WPC_ROMEND
+
 
 /*--------------
 /  Game drivers
@@ -456,10 +454,9 @@ CORE_CLONEDEF(ww,l3,l5,  "White Water (L-3)",1993,"Williams",wpc_mFliptronS,0)
 CORE_CLONEDEF(ww,d3,l5,  "White Water (D-3 LED Ghost Fix)",1993,"Williams",wpc_mFliptronS,0)
 CORE_CLONEDEF(ww,l2,l5,  "White Water (L-2)",1992,"Williams",wpc_mFliptronS,0)
 CORE_CLONEDEF(ww,d2,l5,  "White Water (D-2 LED Ghost Fix)",1992,"Williams",wpc_mFliptronS,0)
-CORE_CLONEDEF(ww,p8,l5,  "White Water (P-8 Prototype, Sound P-2)",1992,"Williams",wpc_mFliptronS,0)
-CORE_CLONEDEF(ww,p9,l5,  "White Water (P-9 Prototype, Sound P-2 LED Ghost Fix)",1992,"Williams",wpc_mFliptronS,0)
-CORE_CLONEDEF(ww,p1,l5,  "White Water (P-8 Prototype, Sound P-1)",1992,"Williams",wpc_mFliptronS,0)
-CORE_CLONEDEF(ww,p2,l5,  "White Water (P-9 Prototype, Sound P-1 LED Ghost Fix)",1992,"Williams",wpc_mFliptronS,0)
+CORE_CLONEDEF(ww,p8,l5,  "White Water (P-8 Prototype)",1992,"Williams",wpc_mFliptronS,0)
+CORE_CLONEDEF(ww,p9,l5,  "White Water (P-9 Prototype LED Ghost Fix)",1992,"Williams",wpc_mFliptronS,0)
+CORE_CLONEDEF(ww,p6,l5,  "White Water (P-6 Prototype)",1992,"Williams",wpc_mFliptronS,0)
 // The following four builds are almost identical, 5th one is much later
 CORE_CLONEDEF(ww,bfr01,l5, "White Water (FreeWPC/Bigfoot R0.1)" ,2016,"Aeneas Verhe",wpc_mFliptronS,0)
 CORE_CLONEDEF(ww,bfr01b,l5,"White Water (FreeWPC/Bigfoot R0.1b)",2018,"Aeneas Verhe",wpc_mFliptronS,0)
@@ -471,15 +468,15 @@ CORE_CLONEDEF(ww,bfr01e,l5,"White Water (FreeWPC/Bigfoot R0.1e)",2020,"Aeneas Ve
 / Simulation Definitions
 /-----------------------*/
 static sim_tSimData wwSimData = {
-  2,    				/* 2 game specific input ports */
+  2,					/* 2 game specific input ports */
   ww_stateDef,			/* Definition of all states */
   ww_inportData,		/* Keyboard Entries */
   { stRTrough, stCTrough, stLTrough, stDrain, stDrain, stDrain, stDrain },	/*Position where balls start.. Max 7 Balls Allowed*/
-  NULL, 				/* no init */
+  NULL,					/* no init */
   ww_handleBallState,	/*Function to handle ball state changes*/
   ww_drawStatic,		/*Function to handle mechanical state changes*/
-  TRUE, 				/* Simulate manual shooter? */
-  NULL  				/* Custom key conditions? */
+  TRUE,					/* Simulate manual shooter? */
+  NULL					/* Custom key conditions? */
 };
 
 /*----------------------
