@@ -6,12 +6,20 @@ What's new in PinMAME:
 Version 3.6 (XX XXth, 2023) - ""
 ------------------------------------------------------------------------------
 
-*** ROM SUPPORT *** Thanks to ipdb.org, Valerio Curzio
+*** CORE/CPU ***
+Improve Cosmic Flash sound emulation
+Improve Zac11178 sound emulation (clown, poolcham, bbeltzac, mexico, zankor, spooky)
+
+*** ROM SUPPORT *** Thanks to ipdb.org, Valerio Curzio, Matt's Basement Arcade
 Correct Dumps:
 Bell: Cosmic Flash (correct sound ROM)
 
 Clones:
 Sexy Girl (exact clone of Bally Playboy but using an additional image projector)
+White Water P-6 (Prototype)
+
+Removed Clones:
+White Water P-1/P-2 (as these were just created to be able to use the P-1 sound roms, now wired to P-6 as found on a real machine)
 
 
 
